INCLUDES = $(all_includes) -I$(top_srcdir)/src
METASOURCES = AUTO
libguiactions_la_LDFLAGS = $(all_libraries)
lib_LTLIBRARIES = libguiactions.la
noinst_HEADERS = addfehlzeitaction.h configurepobjecticonviewaction.h \
	datenpopup.h genericmapviewcontroler.h guiobjectfactoryimpl.h guipopupfactory.h \
	kalenderviewcontroler.h pobjecttablecontrolerimpl.h readcsvlistaction.h \
	sitzplanmapviewcontroler.h weekmapviewcontroler.h
libguiactions_la_SOURCES = addfehlzeitaction.cpp \
	configurepobjecticonviewaction.cpp datenpopup.cpp genericmapviewcontroler.cpp guicreateaction.cpp \
	guicreateaction.h guiobjectfactoryimpl.cpp guipopupfactory.cpp kalenderviewcontroler.cpp \
	pobjecttablecontrolerimpl.cpp readcsvlistaction.cpp showhistoryaction.cpp showhistoryaction.h \
	sitzplanmapviewcontroler.cpp weekmapviewcontroler.cpp
