INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO
libguibase_la_LDFLAGS = $(all_libraries)
lib_LTLIBRARIES = libguibase.la
libguibase_la_SOURCES = editrequestor.cpp guiconfig.cpp guiconfig.h \
	guicontroler.cpp guicontroler.h guiobjectfactory.cpp propertyeditor.cpp propertyeditor.h
noinst_HEADERS = editrequestor.h guiobjectfactory.h
