INCLUDES = $(all_includes) -I$(top_srcdir)/src
METASOURCES = AUTO
libdialogs_la_LDFLAGS = $(all_libraries)
lib_LTLIBRARIES = libdialogs.la
noinst_HEADERS = auswertungdialog.h fehlzeitdialog.h filtereditor.h \
	propertychooser.h xmlexportdialog.h xmlimportdialog.h
libdialogs_la_SOURCES = auswertungdialog.cpp fehlzeitdialog.cpp \
	filtereditor.cpp propertychooser.cpp xmlexportdialog.cpp xmlimportdialog.cpp
