INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO
lib_LTLIBRARIES = libguiforms.la
libguiforms_la_LDFLAGS = $(all_libraries)
libguiforms_la_SOURCES = abstractpropertyeditor.cpp abstractpropertyeditor.h \
	booleaneditor.cpp dateeditor.cpp dateeditor.h editor.cpp editor.h fileeditor.cpp \
	fileeditor.h formspopupfactory.cpp kalenderview.cpp lernkarteviewer.cpp \
	mapperview.cpp mapperview.h markstable.cpp pobjectdialog.cpp pobjectdialog.h \
	pobjecteditor.cpp pobjecteditor.h pobjecteditor2.cpp pobjecteditor2.h pobjectform.cpp \
	pobjectform.h pobjecticonview.cpp pobjecticonview.h pobjecticonviewitem.cpp \
	pobjecticonviewitem.h pobjectlabel.cpp pobjectlabel.h pobjectlistview.cpp pobjectlistview.h \
	pobjectlistviewitem.cpp pobjectlistviewitem.h pobjecttable.cpp pobjecttable.h propertyitem.cpp \
	propertyitem.h reiheplaner.cpp repositoryitem.cpp repositoryitem.h rootitem.cpp \
	rootitem.h seateditor.cpp seateditor.h seatmap.cpp seatmap.h stringeditor.cpp \
	stringeditor.h stundenbewertungeneditor.cpp teilleistungeditor.cpp \
	textpropertyeditor.cpp textpropertyeditor.h textpropertyeditordialog.cpp \
	textpropertyeditordialog.h
noinst_HEADERS = booleaneditor.h formspopupfactory.h kalenderview.h \
	lernkarteviewer.h markstable.h reiheplaner.h stundenbewertungeneditor.h \
	teilleistungeditor.h
