INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO
lib_LTLIBRARIES = librepository.la
librepository_la_LDFLAGS = $(all_libraries)
librepository_la_SOURCES = booleanproperty.cpp collectionproperty.cpp \
	collectionproperty.h collectionpropertyimpl.cpp collectionpropertyimpl.h dateproperty.cpp \
	dateproperty.h datetimeproperty.cpp datetimeproperty.h indirectrepositoryproperty.cpp \
	integerproperty.cpp integerproperty.h numericproperty.cpp numericproperty.h \
	pobjectproperty.cpp pobjectproperty.h propertyaction.cpp propertyaction.h repository.cpp \
	repository.h repositoryenabled.cpp repositoryenabled.h repositoryentry.cpp \
	repositoryentry.h repositoryentryimpl.cpp repositoryentryimpl.h repositoryproperty.cpp \
	repositoryproperty.h repositorypropertyimpl.cpp repositorypropertyimpl.h stringproperty.cpp \
	stringproperty.h
noinst_HEADERS = booleanproperty.h indirectrepositoryproperty.h
