INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = activateaction.h relateaction.h
noinst_LTLIBRARIES = libactions.la
libactions_la_LDFLAGS = $(all_libraries)
libactions_la_SOURCES = activateaction.cpp createaction.cpp createaction.h \
	relateaction.cpp relateaction.h
