INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO
lib_LTLIBRARIES = libfilter.la
libfilter_la_LDFLAGS = $(all_libraries)
libfilter_la_SOURCES = abstractfilter.cpp namefilter.cpp \
	pobjectpropertyfilter.cpp propertyfilter.cpp stringpropertyfilter.cpp typefilter.cpp
noinst_HEADERS = propertyfilter.h
